--- a/my_work.html
+++ b/my_work.html
@@ -3,121 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Annwesha</title>
+    <title>Annwesha Gallery</title>
     <link rel="shortcut icon" type="x-icon" href="images/logo_tab.png">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
 </head>
 <body>
+    
     <!-- Header Start -->
-    <section id="header_letest" class="header_letest">
-        <a href="#"><img src="image/logo_2.png" class="logo" alt=""></a>
+    <section id="gallery_header" class="header">
+        <a href="#"><img src="image/large.png" class="logo" alt=""></a>
         <div>
-            <ul id="latest_navbar">
-                <li><a href="index.html">Home</a></li>
+            <ul id="gallery_navbar">
+                <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="#about_us">About</a></li>
                 <li><a href="#gallery">Gallery</a></li>
-                <li><a class="active" href="#work">Work</a></li>
+                <li><a href="my_work.html">Work</a></li>
                 <li><a href="#contact">Contact Us</a></li>
-                <a href="#" id="latest_close"><i class="fa-solid fa-x"></i></a>
+                <a href="#" id="gallery_close"><i class="fa-solid fa-x"></i></a>
             </ul>
         </div>
         <div id="mobile">
-            <i id="latest_bar" class="fas fa-outdent"></i>
+            <i id="gallery_bar" class="fas fa-outdent"></i>
         </div>
     </section>
     <!-- Header End -->
 
-    <!-- Home Section Start -->
-    <section class="latest_home">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 justify-content-center d-flex align-items-center">
-                    <div class="hero_text">
-                        <h1>Welcome to My<span style="color: #a6b500;"> Portfolio</span></h1>
-                        <h1>I'm <span style="color: #a6b500;">Annwesha Roy</span></h1>
-                        <h3>All My Works are Here.</h3>
-                        <div class="social-media">
-                            <a href="https://www.facebook.com/RonyAdhiAyush"><i class="fa-brands fa-facebook"></i></a>
-                            <a href="https://www.instagram.com/ayush_dey_00/"><i class="fa-brands fa-instagram"></i></a>
-                            <button> Contact Me
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="image_hero">
-                        <img src="image/hero-latest.png" style="max-height: 30rem;" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="mouse_scroll_main d-flex justify-content-end px-5">
-            <div class="mouse-icon">
-                <div class="mouse"></div>
-                <span class="arrow arrow-01"></span>
-                <span class="arrow arrow-02"></span>
-                <span class="arrow arrow-03"></span>
-            </div>
-        </div>
-    </section>
-    <!-- Home Section End -->
 
-    <!-- All Work Section Start -->
-    <section class="all_my_works">
-        <h1>All My <span style="color: #a6b500;">Works</span></h1>
-        <div class="container mt-5">
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="image_of_works">
-                        <img src="image/annu_gallery_7(1).jpg" class="img-fluid" alt="">
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="image_of_works">
-                        <img src="image/annu_gallery_4.jpg" class="img-fluid" alt="">
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="image_of_works">
-                        <img src="image/annu_gallery_6(1).jpg" class="img-fluid" alt="">
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="image_of_works">
-                        <img src="image/annu_gallery_5(2).jpg" class="img-fluid" alt="">
-                    </div>
-                </div>
-            </div>
-            <div class="row mt-5">
-                <div class="col-md-3">
-                    <div class="image_of_works">
-                        <img src="image/annu_gallery_3(3).jpg" class="img-fluid" alt="">
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="image_of_works">
-                        <img src="image/annu_gallery_3(4).jpg" class="img-fluid" alt="">
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="image_of_works">
-                        <img src="image/annu_gallery_14(1).jpg" class="img-fluid" alt="">
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="image_of_works">
-                        <img src="image/annu_gallery_4(2).jpg" class="img-fluid" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- All Work Section End -->
 
     <!-- Footer Section Start -->
-    <footer class="my_work_footer">
+    <footer class="gallery_footer">
         <div class="footer-text">
             <p>Copyright &copy; 2024 by Annwesha Roy | All Right Reserved.</p>
         </div>
