--- a/my_work.html
+++ b/my_work.html
@@ -17,7 +17,7 @@
             <ul id="latest_navbar">
                 <li><a href="./index.html#home">Home</a></li>
                 <li><a href="./index.html#about">About</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="my_work.html">Gallery</a></li>
                 <li><a class="active" href="#work">Work</a></li>
                 <li><a href="./index.html#contact">Contact Us</a></li>
                 <a href="#" id="latest_close"><i class="fa-solid fa-x"></i></a>
