--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul id="navbar">
                 <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="#about_us">About</a></li>
-                <li><a href="my_work.html">Gallery</a></li>
+<!--                 <li><a href="my_work.html">Gallery</a></li> -->
                 <li><a href="my_work.html">Work</a></li>
                 <li><a href="#contact">Contact Us</a></li>
                 <a href="#" id="close"><i class="fa-solid fa-x"></i></a>
